<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">

    <Button android:id="@+id/btnNewActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnNActivity"/>

    <EditText android:id="@+id/editTextNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/EditeNombre"/>

    <EditText android:id="@+id/editTextApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editeApellidos"
        />

    <EditText android:id="@+id/editTextEdad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editeEdad"
        />

    <Button android:id="@+id/btnInsertar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnInsertar"
        />

    <Button android:id="@+id/btnConsulta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnConsulta"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnBorrarTodo"
        android:text="Borrar Todo"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnEditar"
        android:text="Editar"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnBorrarElemento"
        android:text="Borrar Elemento"/>

    <TextView android:id="@+id/textViewConsulta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>
